# fitness-tracker

./: .gitignore  docker-compose.yml
backend/: Cargo.toml  Dockerfile  cardio_exercises.csv  diesel.toml  muscle_groups.csv  variations.csv
backend/migrations/2025-09-23-121519-0000_fittrack/: down.sql  up.sql
backend/migrations/2025-09-23-121850-0000_users/: down.sql  up.sql
backend/migrations/20250110100000_init/: down.sql  up.sql
backend/src/: config.toml  configuration.rs  lib.rs  main.rs  schema.rs
backend/src/api/: dashboard.rs  login.rs  login_page.rs  middleware.rs  mod.rs  register.rs  workouts.rs
backend/src/db/: database.rs  logger.rs  mod.rs  model.rs  user.rs  workouts.rs
backend/src/models/: model.rs
backend/src/services/: auth_service.rs  get_service.rs  jwt_service.rs  mod.rs  post_service.rs  put_service.rs
frontend/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(auth)/reset-pwd/: page.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/(protected)/dashboard/: page.tsx
frontend/src/app/(protected)/log/: page.tsx
frontend/src/app/components/: AuthButton.tsx  AuthCard.tsx  AuthInput.tsx  DayDetailsModal.tsx  EditSessionModal.tsx  Heatmap.tsx  Modal.tsx  Popup.tsx  ProgressChart.tsx  Sidebar.tsx  VolumeBars.tsx
frontend/src/app/hooks/: useAuthFetch.ts
frontend/src/app/login/: page.tsx
frontend/src/app/protected/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reset-pwd/: page.tsx
(+2 files in other folders)
