[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
toml = "0.5"
log = "0.4.22"
env_logger = "0.11.8"
anyhow = "1.0"
tokio-postgres = "0.7"
deadpool-postgres = "0.11"