[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
diesel = { version = "2.2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.6.1", features = ["postgres" , "pool", "deadpool" , "bb8"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
toml = "0.5"
log = "0.4.22"
env_logger = "0.11.8"
anyhow = "1.0"
argon2 = "0.5"
password-hash = "0.5"
once_cell = "1.19" 
rand = "0.8"
jsonwebtoken = "9.3.1"
time = "0.3"
csv = "1.3"
dotenv = "0.15"
